syntax = "proto3";

package misc.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service MiscService {
  rpc ListOPReturn(google.protobuf.Empty) returns (ListOPReturnResponse);
  rpc BroadcastNews(BroadcastNewsRequest) returns (BroadcastNewsResponse);
  rpc CreateTopic(CreateTopicRequest) returns (CreateTopicResponse);
  rpc ListTopics(google.protobuf.Empty) returns (ListTopicsResponse);
  rpc ListCoinNews(ListCoinNewsRequest) returns (ListCoinNewsResponse);

  // File timestamping
  rpc TimestampFile(TimestampFileRequest) returns (TimestampFileResponse);
  rpc ListTimestamps(google.protobuf.Empty) returns (ListTimestampsResponse);
  rpc VerifyTimestamp(VerifyTimestampRequest) returns (VerifyTimestampResponse);
}

message ListOPReturnResponse {
  repeated OPReturn op_returns = 1;
}

message OPReturn {
  int64 id = 1;
  string message = 2;
  string txid = 3;
  int32 vout = 4;
  optional int32 height = 5;

  google.protobuf.Timestamp create_time = 7;
}

message BroadcastNewsRequest {
  string topic = 1;
  string headline = 2;
  string content = 3;
  // Fee options - exactly one should be set (0 = use Core's estimate)
  uint64 fee_sat_per_vbyte = 4;  // Fee rate in sat/vB
  uint64 fee_sats = 5;           // Total fee in satoshis
}

message BroadcastNewsResponse {
  string txid = 1;
}

message CreateTopicRequest {
  string topic = 1;
  string name = 2;
  int32 retention_days = 3;  // 0 = infinite retention
}

message CreateTopicResponse {
  string txid = 1;
}

message Topic {
  int64 id = 1;
  string topic = 2;
  string name = 3;

  google.protobuf.Timestamp create_time = 4;

  // Whether the topic creation transaction has been mined
  bool confirmed = 5;
  // Transaction ID of the topic creation
  string txid = 6;
  // Retention period for news items (0 = infinite)
  int32 retention_days = 7;
}

message ListTopicsResponse {
  repeated Topic topics = 1;
}

message ListCoinNewsRequest {
  // if set, only return news for this topic
  optional string topic = 1;
}

message CoinNews {
  int64 id = 1;
  string topic = 2;
  string headline = 3;
  string content = 4;
  int64 fee_sats = 5;

  google.protobuf.Timestamp create_time = 6;
}

message ListCoinNewsResponse {
  repeated CoinNews coin_news = 1;
}

// File timestamp messages
message TimestampFileRequest {
  string filename = 1;
  bytes file_data = 2;
}

message TimestampFileResponse {
  int64 id = 1;
  string file_hash = 2;
  string txid = 3;
}

message FileTimestamp {
  int64 id = 1;
  string filename = 2;
  string file_hash = 3;
  optional string txid = 4;
  optional int64 block_height = 5;
  string status = 6;
  google.protobuf.Timestamp created_at = 7;
  optional google.protobuf.Timestamp confirmed_at = 8;
  uint32 confirmations = 9;
}

message ListTimestampsResponse {
  repeated FileTimestamp timestamps = 1;
}

message VerifyTimestampRequest {
  bytes file_data = 1;
  optional string filename = 2;
}

message VerifyTimestampResponse {
  FileTimestamp timestamp = 1;
  string message = 2;
}
